# CppCourseVK

./: .clang-format  .gitignore  Makefile  README.md  build.sh  check_coverage.py  check_valgrind_report.sh  run_coverage.sh  run_linters.sh  run_memtest.sh  test_frontend.sh
.github/workflows/: ci.yml
DoIt/: CMakeLists.txt  main.cpp
DoIt/backend/: database_connector.cpp  database_connector.h  database_interaction.cpp  database_interaction.h  server.hpp  server_main.cpp  talktoclient.hpp
DoIt/database/: BoardDataBase.cpp  BoardDataBase.h  CMakeLists.txt  CardDataBase.cpp  CardDataBase.h  PostgreDataBase.cpp  PostgreDataBase.h  UserDataBase.cpp  UserDataBase.h  allDataBasesInfo.h  database.h
DoIt/frontend/: CMakeLists.txt  main.cpp
DoIt/frontend/Data/: board.h  card.h  check_list.h  check_list_item.h  column.h  object.h  tag.h  user.h
DoIt/frontend/Gui/: auth_window.cpp  auth_window.h  board_widget.cpp  board_widget.h  boardwidgetmanager.cpp  boardwidgetmanager.h  card_widget.cpp  card_widget.h  column_widget.cpp  column_widget.h  comment.cpp  comment.h  gui_user.cpp  gui_user.h  main_interfaces.h  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  navbar.cpp  navbar.h  reg_window.cpp  reg_window.h  resources.qrc  update.cpp  update.h
DoIt/frontend/Lib/: json.hpp
DoIt/frontend/Managers/: gui_manager.cpp  gui_manager.h  main_manager.cpp  main_manager.h  net_manager.cpp  net_manager.h  user_manager.cpp  user_manager.h
DoIt/frontend/Test/: CMakeLists.txt  test_net_manager.cpp
DoIt/frontend/Test/SendFiles/: text.txt
DoIt/tests/: CMakeLists.txt  env_settings.hpp  fill_db.sql  prepare_db.sh  tests_database.cpp
DoIt/tests/data/: boards_data.json  cards_data.json  check_lists_data.json  check_lists_items_data.json  columns_data.json  tags_data.json  users2boards_data.json  users_data.json
homework2/: CMakeLists.txt  Makefile  check_coverage.py  main.cpp  run_coverage.sh  run_linters.sh
homework2/.github/workflows/: ci.yml
homework2/hw2/matrix_lib/: CMakeLists.txt  vector.cpp  vector.h
homework2/hw2/tests/: CMakeLists.txt  test_matrix.cpp
homework2/matrix_lib/: CMakeLists.txt  matrix.cpp  matrix.h  vector.cpp  vector.h
homework2/tests/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
homework5/: CMakeLists.txt  main.cpp
homework5/src/: CMakeLists.txt  rb_tree.hpp  set.hpp
homework5/tests/: CMakeLists.txt  basic_tests.cpp  basic_tests.h  main_tests.cpp  my_tests.cpp  test_set.cpp
linters/: check_before_build.sh  check_object_files.sh  run.sh
